# vanna_eldad_custom_ui3

./: .$architecture.drawio.bkp  .dockerignore  .gitignore  CHART_BACKEND_TODO.md  CHART_FEATURE_COMPLETE.md  CHART_QUICK_REF.md  CHART_SIMPLIFIED.md  CHART_TYPE_DEBUG.md  DEBUG_CHART.md  Dockerfile  Dockerfile.ui  INSIGHTS_FEATURE_COMPLETE.md  INSTALLATION_GUIDE.md  MAINTENANCE.md  MIGRATION_COMPLETE.md  PROMPTS.md  QUICKSTART.md  QUICKSTART_UI.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  TRAINING_AND_QUICKSTART.md  TRAINING_DATA_SUMMARY.md  UI_README.md  VANNA2_MIGRATION.md  architecture.drawio  debug_test.py  diagnose.html  docker-compose.yml  logs.txt  page_source.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.ps1  test_2006_sales.json  test_chart.html  test_chart_dates.json  test_chart_request.json  test_prompt_display.py  (+3 more)
.github/workflows/: deploy.yml
db/migrations/: 001_conversation_history.sql  002_pinned_questions.sql
scripts/: init_pgvector.sql  load_training_data.py  run_insights_migrations.py
src/: __init__.py  config.py  main.py  main_vanna2.py  main_vanna2_full.py  ui_app.py
src/agent/: __init__.py  conversation_history.py  insight_service.py  jeen_insights_agent.py  (+6 more)
templates/: insight_prompt.txt
tests/: README.md  README_TESTING.md  TEST_QUERIES.md  test_chart_enhancement.py  test_integration.py  test_results.json  test_tools.py  test_training_data_usage.py  test_ui_e2e.py
training_data/: business-terms.json  ddl.json  documentation.json  samples.json  schema.json  sql_examples.json  sql_patterns.json
(+97 files in other folders)
